优化代码规范代码   bug处理

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,13 +1,15 @@
 #数据库链接信息properties文件 方便统一修改
 #数据库链接驱动
+#jdbc.driver=net.sourceforge.jtds.jdbc.Driver
 jdbc.driver=oracle.jdbc.driver.OracleDriver
 #数据库链接url
-jdbc.urlT=jdbc:oracle:thin:@139.129.94.228:1521:bigezaixian
-jdbc.urlL=jdbc:oracle:thin:@127.0.0.1:1521:bigezaixian
+#jdbc.urlT=jdbc:jtds:sqlserver://192.168.90.133:1433;databaseName=juhuawang
+jdbc.urlT=jdbc:oracle:thin:@192.168.0.37:1521:juhuawang
+jdbc.urlL=jdbc:oracle:thin:@127.0.0.1:1521:juhuawang
 #数据库链接用户名
-jdbc.username=BGZX
+jdbc.username=rjds
 #数据库链接密码
-jdbc.password=Bigezaixian001
+jdbc.password=Rjdsjhw001
 #定义初始连接数
 jdbc.initialSize=30
 #定义最大连接数
